tests/snippets/invalid_snippets/incomplete_snippet.snippet
<!javascript
  (
    "log",
    "Logs a Message to the console"
  )
>

